--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,18 @@
             <version>5.5.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <!-- jdk8以下就使用mapstruct -->
+            <artifactId>mapstruct-jdk8</artifactId>
+            <version>1.2.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>1.2.0.Final</version>
+        </dependency>
+
         <!--其他需要的包-->
         <dependency>
             <groupId>org.apache.commons</groupId>
