feat:修改账号密码

--- a/src/main/java/com/mybatis/config/datasources/jdbc.properties
+++ b/src/main/java/com/mybatis/config/datasources/jdbc.properties
@@ -1,3 +1,3 @@
-jdbc.shop.url=jdbc:mysql://xx/xm_jointly?characterEncoding=utf8
-jdbc.shop.username=xx
-jdbc.shop.password=xx
+jdbc.shop.url=jdbc:mysql://localhost/java_study?characterEncoding=utf8
+jdbc.shop.username=root
+jdbc.shop.password=
